<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_month"
            android:icon="@android:drawable/ic_menu_month"
            android:title="@string/drawable_menu_month" />
        <item
            android:id="@+id/nav_week"
            android:icon="@android:drawable/ic_menu_week"
            android:title="@string/drawable_menu_week" />
        <item
            android:id="@+id/nav_day"
            android:icon="@android:drawable/ic_menu_day"
            android:title="@string/drawable_menu_day" />
    </group>

    <item android:title="@string/drawable_menu_group">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_person"
                android:title="@string/drawable_menu_login" />
        </menu>
    </item>

</menu>
